@@ -2,13 +2,18 @@ package com.emazon.stock_service.Application.handler;
 import com.emazon.stock_service.Application.dto.CategoryDtoRequest;
 import com.emazon.stock_service.Application.dto.CategoryDtoResponse;
 import com.emazon.stock_service.Application.mapper.CategoryRequestMapper;
+import com.emazon.stock_service.Domain.Constants.Constants;
 import com.emazon.stock_service.Domain.api.ICategoryService;
 import com.emazon.stock_service.Domain.model.Category;
+import com.emazon.stock_service.Domain.model.Pagination;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -25,10 +30,35 @@ public class CategoryHandler implements ICategoryHandler {
     }
 
     @Override
-    public List<CategoryDtoResponse> listCategories() {
-        List<Category> categories = categoryService.listCategories();
-        return categories.stream()
-                .map(categoryRequestMapper::toCategoryDtoResponse)
-                .collect(Collectors.toList());
+    public Pagination<CategoryDtoResponse> listCategories(String sortOrder, int page, int size) {
+        return new Pagination<>(
+                categoryService.listCategories(
+                                PageRequest.of(page, size,
+                                        "desc".equalsIgnoreCase(sortOrder) ? Sort.by(Sort.Direction.DESC, Constants.CATEGORY_NAME_FIELD) : Sort.by(Sort.Direction.ASC, Constants.CATEGORY_NAME_FIELD))
+                        ).stream()
+                        .map(categoryRequestMapper::toCategoryDtoResponse)
+                        .toList(),
+                page,
+                size,
+                categoryService.listCategories(
+                        PageRequest.of(page, size,
+                                "desc".equalsIgnoreCase(sortOrder) ? Sort.by(Sort.Direction.DESC, Constants.CATEGORY_NAME_FIELD) : Sort.by(Sort.Direction.ASC, Constants.CATEGORY_NAME_FIELD))
+                ).getTotalElements(),
+                categoryService.listCategories(
+                        PageRequest.of(page, size,
+                                "desc".equalsIgnoreCase(sortOrder) ? Sort.by(Sort.Direction.DESC, Constants.CATEGORY_NAME_FIELD) : Sort.by(Sort.Direction.ASC, Constants.CATEGORY_NAME_FIELD))
+                ).getTotalPages(),
+                !categoryService.listCategories(
+                        PageRequest.of(page, size,
+                                "desc".equalsIgnoreCase(sortOrder) ? Sort.by(Sort.Direction.DESC, Constants.CATEGORY_NAME_FIELD) : Sort.by(Sort.Direction.ASC, Constants.CATEGORY_NAME_FIELD))
+                ).hasNext()
+        );
     }
+
+    @Override
+    public Page<CategoryDtoResponse> listCategories(Pageable pageable) {
+        return categoryService.listCategories(pageable)
+                .map(categoryRequestMapper::toCategoryDtoResponse);
+    }
+
 }
